[package]
name = "wqutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
csv = "1.1.6"
url = "2.2.2"
image = "0.24.1"
png = "=0.17.3"
crossbeam = "0.8.1"